--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,203 @@
 <!DOCTYPE html>
-<html lang="end">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="./input.css" rel="stylesheet" />
-    <title>Tailwind Starter Jessica</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@500;600&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <title>Frontend Mentor | Testimonials Grid Section</title>
   </head>
-  <body>
-    <h1 class="text-3xl font-bold underline">Hello world!</h1>
+  <body class="font-barlowSemiCond text-sm">
+    <div
+      class="main-wrapper bg-lightGrayishBlue h-full flex justify-center items-center md:h-screen"
+    >
+      <div
+        class="testimonial grid grid-cols-1 gap-7 p-16 md:grid md:grid-cols-4 md:grid-rows-2"
+      >
+        <div
+          class="first-testimonial-purple bg-moderateViolate order-1 rounded-lg md:col-span-2 p-10"
+        >
+          <div class="flex">
+            <div class="image-namesection">
+              <img
+                class="rounded-3xl w-9 border-2 border-x-lightGrayishBlue"
+                src="images/image-daniel.jpg"
+                alt="daniel"
+              />
+            </div>
+
+            <div class="name-section ml-4">
+              <p class="name-white text-lightGrayishBlue">Daniel Clifford</p>
+              <p class="title text-lightGrayishBlue opacity-40">
+                Verified Graduate
+              </p>
+            </div>
+          </div>
+
+          <p class="summary-info-white text-white font-bold text-lg mt-4 mb-4">
+            I received a job offer mid-course, and the subjects I learned were
+            current, if not more so, in the company I joined. I honestly feel I
+            got every penny’s worth.
+          </p>
+
+          <p class="reviews text-lightGrayishBlue opacity-40">
+            “ I was an EMT for many years before I joined the bootcamp. I’ve
+            been looking to make a transition and have heard some people who had
+            an amazing experience here. I signed up for the free intro course
+            and found it incredibly fun! I enrolled shortly thereafter. The next
+            12 weeks was the best - and most grueling - time of my life. Since
+            completing the course, I’ve successfully switched careers, working
+            as a Software Engineer at a VR startup. ”
+          </p>
+        </div>
+        <div
+          class="second-testimonial-darkgrey bg-veryDarkGrayishBlue order-2 rounded-lg text-white p-10"
+        >
+          <div class="flex">
+            <div class="image-namesection">
+              <img
+                class="rounded-3xl w-9 border-2 border-x-lightGrayishBlue"
+                src="images/image-jonathan.jpg"
+                alt="Jonathan"
+              />
+            </div>
+
+            <div class="name-section ml-4">
+              <p class="name-white text-lightGrayishBlue">Jonathan Walters</p>
+              <p class="title text-lightGrayishBlue opacity-40">
+                Verified Graduate
+              </p>
+            </div>
+          </div>
+
+          <p class="summary-info-white text-white font-bold text-lg mt-4 mb-4">
+            The team was very supportive and kept me motivated
+          </p>
+
+          <p class="reviews text-lightGrayishBlue">
+            “ I started as a total newbie with virtually no coding skills. I now
+            work as a mobile engineer for a big company. This was one of the
+            best investments I’ve made in myself. ”
+          </p>
+        </div>
+        <div
+          class="third-testimonial bg-white order-5 rounded-lg md:order-3 md:row-span-2 p-10"
+        >
+          <div class="flex">
+            <div class="image-namesection">
+              <img
+                class="rounded-3xl w-9 border-2 border-x-lightGrayishBlue"
+                src="images/image-kira.jpg"
+                alt="Kira"
+              />
+            </div>
+
+            <div class="name-section ml-4">
+              <p class="name-darkgrey text-veryDarkBlackishBlue">
+                Kira Whittle
+              </p>
+              <p class="title text-veryDarkBlackishBlue opacity-40">
+                Verified Graduate
+              </p>
+            </div>
+          </div>
+
+          <p class="summary-info-darkblue font-bold text-lg mt-4 mb-4">
+            Such a life-changing experience. Highly recommended!
+          </p>
+
+          <p class="reviews text-veryDarkBlackishBlue opacity-60">
+            “ Before joining the bootcamp, I’ve never written a line of code. I
+            needed some structure from professionals who can help me learn
+            programming step by step. I was encouraged to enroll by a former
+            student of theirs who can only say wonderful things about the
+            program. The entire curriculum and staff did not disappoint. They
+            were very hands-on and I never had to wait long for assistance. The
+            agile team project, in particular, was outstanding. It took my
+            learning to the next level in a way that no tutorial could ever
+            have. In fact, I’ve often referred to it during interviews as an
+            example of my developent experience. It certainly helped me land a
+            job as a full-stack developer after receiving multiple offers. 100%
+            recommend! ”
+          </p>
+        </div>
+        <div
+          class="fourth-testimonial bg-white order-3 md:order-4 p-10 rounded-lg"
+        >
+          <div class="flex">
+            <div class="image-namesection">
+              <img
+                class="rounded-3xl w-9 border-2 border-x-lightGrayishBlue"
+                src="images/image-jeanette.jpg"
+                alt="Jeanette"
+              />
+            </div>
+
+            <div class="name-section ml-4">
+              <p class="name-darkgrey text-veryDarkBlackishBlue">
+                Jeanette Harmon
+              </p>
+              <p class="title text-veryDarkBlackishBlue opacity-40">
+                Verified Graduate
+              </p>
+            </div>
+          </div>
+
+          <p
+            class="summary-info-darkblue text-veryDarkBlackishBlue font-bold text-lg mt-4 mb-4"
+          >
+            An overall wonderful and rewarding experience
+          </p>
+
+          <p class="reviews text-veryDarkBlackishBlue opacity-60">
+            “ Thank you for the wonderful experience! I now have a job I really
+            enjoy, and make a good living while doing something I love. ”
+          </p>
+        </div>
+        <div
+          class="fifth-testimonial-black bg-veryDarkBlackishBlue rounded-lg text-white order-4 md:order-5 md:col-span-2 p-10"
+        >
+          <div class="flex">
+            <div class="image-namesection">
+              <img
+                class="rounded-3xl w-9 border-2 border-x-lightGrayishBlue"
+                src="images/image-patrick.jpg"
+                alt="Patrick"
+              />
+            </div>
+
+            <div class="name-section ml-4">
+              <p class="name-white">Patrick Abrams</p>
+              <p class="title">Verified Graduate</p>
+            </div>
+          </div>
+          <p class="summary-info-white text-white font-bold text-lg mt-4 mb-4">
+            Awesome teaching support from TAs who did the bootcamp themselves.
+            Getting guidance from them and learning from their experiences was
+            easy.
+          </p>
+
+          <p class="reviews">
+            “ The staff seem genuinely concerned about my progress which I find
+            really refreshing. The program gave me the confidence necessary to
+            be able to go out in the world and present myself as a capable
+            junior developer. The standard is above the rest. You will get the
+            personal attention you need from an incredible community of smart
+            and amazing people. ”
+          </p>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
